# fbi

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md
.github/workflows/: fbi_tests.yml
cmake/: fbi-config.cmake.in
src/fbi/: BigInteger.cc  BigInteger.hh  BigInteger.inl  BigIntegerAlgorithms.cc  BigIntegerAlgorithms.hh  BigIntegerLibrary.hh  BigIntegerUtils.cc  BigIntegerUtils.hh  BigIntegerUtils.inl  BigUnsigned.cc  BigUnsigned.hh  BigUnsigned.inl  BigUnsignedInABase.cc  BigUnsignedInABase.hh  CMakeLists.txt  Exception.cc  Exception.hh  NumberlikeArray.hh  NumberlikeArray.inl
test/: BigUnsignedTests.hh  CMakeLists.txt  sample.cc  test.cc  testsuite.cc
